--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -51,7 +51,7 @@
           <!-- Login -->
           <li>
             <a class="nav-link" href="{% url 'login' %}">
-              <img src="{% static 'images/user.svg' %}" alt="Login">
+              <img src="{% static '/images/user.svg' %}" alt="Login">
             </a>
           </li>
         {% endif %}
