--- a/static/css/style.css
+++ b/static/css/style.css
@@ -147,16 +147,16 @@ a {
     .hero .hero-img-wrap:after {
       content: "";
       position: absolute;
-      width: 200px;
-      height: 207px;
+      width: 900px;
+      height: 900px;
       background-image: url("../images/v1.png");
       background-size: contain;
       background-repeat: no-repeat;
-      right: 210px;
+      right: -210px;
       top: -0px; }
       @media (min-width: 1200px) {
         .hero .hero-img-wrap:after {
-          top: -10px; } }
+          top: -80px; } }
 
 .btn {
   font-weight: 600;
@@ -269,24 +269,6 @@ a {
     .product-section .product-item:hover:before {
       height: 70%; }
 
-.why-choose-section {
-  padding: 7rem 0; }
-  .why-choose-section .img-wrap {
-    position: relative; }
-    .why-choose-section .img-wrap:before {
-      position: absolute;
-      content: "";
-      width: 255px;
-      height: 217px;
-      background-image: url("../images/dots-yellow.svg");
-      background-repeat: no-repeat;
-      background-size: contain;
-      -webkit-transform: translate(-40%, -40%);
-      -ms-transform: translate(-40%, -40%);
-      transform: translate(-40%, -40%);
-      z-index: -1; }
-    .why-choose-section .img-wrap img {
-      border-radius: 20px; }
 
 .feature {
   margin-bottom: 30px; }
@@ -316,7 +298,7 @@ a {
   .we-help-section .imgs-grid {
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: (1fr)[27];
+    -ms-grid-columns: (1fr)[ ];
     grid-template-columns: repeat(27, 1fr);
     position: relative; }
     .we-help-section .imgs-grid:before {
@@ -711,3 +693,13 @@ textarea {
     background: rgba(59, 93, 80, 0.2); }
 
 
+    .img-fluid{
+      position: relative;
+      margin-top: -5.2rem;
+    }
+
+
+    .icon img, svg{
+      width: 40px;
+
+    }
