--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -21,7 +21,7 @@
       <div class="col-lg-6">
         <div class="subscription-form">
           <h3 class="d-flex align-items-center mb-3">
-            <span class="me-2"><img src="{% static 'images/envelope-outline.svg' %}" alt="Envelope" class="img-fluid" style="width:24px;"></span>
+            <!--<span class="me-2"><img src="{% static 'images/envelope-outline.svg' %}" alt="Envelope" class="img-fluid" style="width:24px;"></span>-->de
             <span>Receba atualizações por e-mail</span>
           </h3>
 
